Revision of formulas